<resources>
    <string name="app_name">FileTest</string>
    <string name="action_settings">Settings</string>
    <string name="file_path">filepath</string>
    <string name="access_status">AccessStatus</string>
    <string name="status_save_success">Save Success!</string>
    <string name="status_save_failed">Save Failed</string>
    <string name="save_button_title1">Save(Activity)</string>
    <string name="load_button_title1">Load(Activity)</string>
    <string name="status_load_success">Load Success!</string>
    <string name="status_load_failed">Load Failed!</string>
    <string name="status_delete_success">Delete Success!</string>
    <string name="status_delete_failed">Delete Failed</string>
    <string name="save_button_title2">Save(JNI)</string>
    <string name="load_button_title2">Load(JNI)</string>
    <string name="delete_button_title">Delete(Activity)</string>
    <string name="absolute_path_button_title">Absolute Path Access</string>
</resources>
