<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="filetest.casualdrive.com.filetest.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/filepath_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_path" />

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/filepath_text_view"
        android:layout_below="@+id/filepath_text_view"
        android:layout_marginTop="24dp"
        android:text="@string/access_status" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_button"
        android:layout_centerHorizontal="true"
        android:text="@string/load_button_title1" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/load_button"
        android:layout_below="@+id/status_text_view"
        android:layout_marginTop="30dp"
        android:text="@string/save_button_title1" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/load_button"
        android:layout_below="@+id/load_button"
        android:text="@string/delete_button_title" />

    <Button
        android:id="@+id/save_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/save_button_title2" />

    <Button
        android:id="@+id/load_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_button2"
        android:layout_centerHorizontal="true"
        android:text="@string/load_button_title2" />

    <CheckBox
        android:id="@+id/absoluteCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/load_button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/absolute_path_button_title" />

</RelativeLayout>
